--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,11 @@
-sudo: false
-
 language: python
 
 python:
-  - 2.7
+  - 3.6
 
+# command to install dependencies
 install:
-  - pip install codecov
+  - pip install -r requirements.txt
 
 script:
   - coverage run tests.py
