--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
   - pip install -r requirements.txt
 
 script:
-  - coverage run tests.py
+  - coverage run code/problem1_test.py
 
 after_success:
   - codecov
