--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,7 @@ install:
   - pip install -r requirements.txt
 
 script:
-  - coverage run code/problem1_test.py
-  - coverage run code/problem2_test.py
+  - coverage run code/test.py
 
 after_success:
   - codecov
