--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,20 @@
-language: python
+matrix:
+  include:
+    language: python
+    python: 3.6
+    install: pip install -r requirements.txt
+    script: coverage run py_src/test.py
+    after_success: codecov
 
-python:
-  - 3.6
+    language: node_js
+    install:
+      - npm install -g codecov
+      - npm install
+    script:
+      - npm run problem001
+      - npm run test
+    after_success: codecov
 
-# command to install dependencies
-install:
-  - pip install -r requirements.txt
-
-script:
-  - coverage run py_src/test.py
-
-after_success:
-  - codecov
+notifications:
+  email:
+    - d.schuette@online.de
