--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ matrix:
       - node_js
     install:
       - cd js_src
+      - npm install
       - npm install -g codecov
     script:
       - npm run problem001
