--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,26 @@
 matrix:
   include:
-    language: python
-    python: 3.6
-    install: pip install -r requirements.txt
-    script: coverage run py_src/test.py
-    after_success: codecov
+    - language: python
+      python:
+        - 3.6
+      install:
+        - pip install -r requirements.txt
+      script:
+        - coverage run py_src/test.py
+      after_success: codecov
 
-    language:
-      - node_js
-    install:
-      - cd js_src
-      - npm install
-      - npm install -g codecov
-    script:
-      - npm run problem001
-      - npm run test
-    after_success: codecov
+    - language: node_js
+      node_js:
+        - 10.15
+      before_install:
+        - cd js_src/
+      install:
+        - npm install
+        - npm install -g codecov
+      script:
+        - npm run problem001
+        - npm run test
+      after_success: codecov
 
 notifications:
-  email:
-    - d.schuette@online.de
+  email: false
