--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ matrix:
       install:
         - npm install
         - npm install -g codecov
+        - npm install -g jest
       script:
         - npm run problem001
         - npm run test
