--- a/cpp_src/CMakeLists.txt
+++ b/cpp_src/CMakeLists.txt
@@ -3,6 +3,13 @@ cmake_minimum_required (VERSION 3.0.2)
 # Enable optimization and link OpenMP
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -fopenmp")
 
+if(NOT EXISTS include/fmt)
+    message("Fmt library not found, initializing git submodule...")
+    execute_process(COMMAND git submodule update --init -- include/fmt WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
+endif()
+
+add_subdirectory(include/fmt)
+
 file( GLOB problems problem*.cpp  )
 foreach( problem ${problems} )    
     # Store relative filename without ".cpp" in outname
@@ -10,4 +17,5 @@ foreach( problem ${problems} )
 
 
 	add_executable( ${outname}.out ${problem}  )    
+    target_link_libraries(${outname}.out fmt::fmt)
 endforeach()
