--- a/c_src/Makefile
+++ b/c_src/Makefile
@@ -2,18 +2,22 @@
 CFLAGS := -coverage -O0 -std=c99
 
 target:
-	gcc $(CFLAGS) utest.c -c -o utest.o
+	gcc $(CFLAGS) test/utest.c -c -o test/utest.o
 	gcc $(CFLAGS) problem001.c -c -o p1.o
 	gcc $(CFLAGS) problem002.c -c -o p2.o
-	gcc $(CFLAGS) p1.o utest.o -o p1
-	gcc $(CFLAGS) p2.o utest.o -o p2
+	gcc $(CFLAGS) p1.o test/utest.o -o p1
+	gcc $(CFLAGS) p2.o test/utest.o -o p2
 	bash ./test.sh
 
 debug_utest:
-	gcc -g utest.c -c -o utest.o
+	gcc -g utest.c -c -o test/utest.o
 	gcc -g problem001.c -c -o p1.o
-	gcc -g utest.o p1.o -o p1
+	gcc -g test/utest.o p1.o -o p1
 	./p1
+
+clean_utest:
+	rm test/*.gcno test/*.gcda test/*.gcov
 
 clean:
 	rm -f *.o p1 p2 *.gcno *.gcda *.gcov
+	rm -f test/*.o test/*.gcno test/*.gcda test/*.gcov
