--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,24 @@ matrix:
         - bash <(curl -s https://codecov.io/bash)
         - cd ..
 
+    - language: cpp
+      dist: trusty
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - gcc-8
+            - g++-8
+      before_script:
+        - cd cpp_src
+        - export CC=gcc-8
+        - export CXX=g++-8
+      script:
+        - cmake .
+        - make
+        - make tests
+
     - language: rust
       sudo: required
       addons:
