--- a/.travis.yml
+++ b/.travis.yml
@@ -42,13 +42,15 @@ matrix:
           sources:
             - ubuntu-toolchain-r-test
           packages:
-            - gcc-8
-            - g++-8
+            - gcc-6
+            - g++-6
       before_script:
         - cd cpp_src
-        - export CC=gcc-8
-        - export CXX=g++-8
+        - export CC=gcc-6
+        - export CXX=g++-6
+        - export GCOV=gcov-6
       script:
+        - sudo ln -sf /usr/bin/gcov-6 /usr/local/bin/gcov
         - cmake -DGCOV=ON .
         - make
         - make tests
