add first full implementation of utest/utest.h

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ matrix:
         - cd c_src
       script:
         - make
-        - make clean_utest
+        - make test
       after_success:
         - bash <(curl -s https://codecov.io/bash)
         - cd ..
