Move back to get_code_cov for easier local evaluation

--- a/.gitignore
+++ b/.gitignore
@@ -33,5 +33,8 @@ cpp_src/Testing
 # ignore js coverage reports
 coverage/
 
+# ignore cpp coverage reports
+coverage.info
+
 # ignore rust dev binaries
 rust_src/target
