add go_src submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,9 @@
 	path = cpp_src/include/Catch2
 	url = https://github.com/catchorg/Catch2
     ignore = dirty
+[submodule "go_src/go_src/goeulerproject"]
+	path = go_src/go_src/goeulerproject
+	url = https://github.com/DanielSchuette/goeulerproject
+[submodule "go_src/goeulerproject"]
+	path = go_src/goeulerproject
+	url = https://github.com/DanielSchuette/goeulerproject
