--- a/c_src/Makefile
+++ b/c_src/Makefile
@@ -3,14 +3,16 @@ CFLAGS := -O0 -std=c99 -lm
 COVFLAG := -coverage
 test_dir := utest
 test := $(test_dir)/utest
-problems.o := p1.o p2.o
-problems_exe := p1 p2
+problems.o := p1.o p2.o p3.o
+problems_exe := p1 p2 p3
 
-.PHONY: all debug_utest clean_utest clean test
+.PHONY: all clean test
 
 all: $(problems_exe)
-	bash ./test.sh
-	bash ./time.sh
+	@echo 'Running tests.'
+	@bash ./test.sh
+	@echo 'Timing solutions.'
+	@bash ./time.sh
 
 $(problems_exe): $(test).o
 	gcc $(CFLAGS) $(COVFLAG) p1.o $(test).o -o p1
@@ -26,8 +28,9 @@ $(problems.o):
 	gcc $(CFLAGS) $(COVFLAG) problem003.c -c -o p3.o
 
 test:
-	bash ./test.sh
+	@bash ./test.sh
 
 clean:
-	rm -f *.o $(problems_exe) *.gcno *.gcda *.gcov
-	rm -f $(test_dir)/*.o $(test_dir)/*.gcno $(test_dir)/*.gcda $(test_dir)/*.gcov
+	@rm -f *.o $(problems_exe) *.gcno *.gcda *.gcov
+	@rm -f $(test_dir)/*.o $(test_dir)/*.gcno $(test_dir)/*.gcda $(test_dir)/*.gcov
+	@echo 'Clean.'
