--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,7 @@ matrix:
         - sudo apt-get update
         - sudo apt-get install -y libc6
         - ldd --version # check if glibc is installed
+        - gcc --version # check gcc version
       before_script:
         - cd c_src
       script:
