--- a/c_src/Makefile
+++ b/c_src/Makefile
@@ -15,6 +15,7 @@ all: $(problems_exe)
 $(problems_exe): $(test).o
 	gcc $(CFLAGS) $(COVFLAG) p1.o $(test).o -o p1
 	gcc $(CFLAGS) $(COVFLAG) p2.o $(test).o -o p2
+	gcc $(CFLAGS) $(COVFLAG) p3.o $(test).o -o p3
 
 $(test).o: $(problems.o)
 	gcc $(CFLAGS) $(test).c -c -o $(test).o
@@ -22,6 +23,7 @@ $(test).o: $(problems.o)
 $(problems.o):
 	gcc $(CFLAGS) $(COVFLAG) problem001.c -c -o p1.o
 	gcc $(CFLAGS) $(COVFLAG) problem002.c -c -o p2.o
+	gcc $(CFLAGS) $(COVFLAG) problem003.c -c -o p3.o
 
 test:
 	bash ./test.sh
