--- a/cpp_src/CMakeLists.txt
+++ b/cpp_src/CMakeLists.txt
@@ -8,7 +8,7 @@ option(GCOV "GCOV" OFF)
 if(GCOV) 
     set(CMAKE_CXX_FLAGS "--coverage ${OpenMP_CXX_FLAGS}")
 else()
-    set(CMAKE_CXX_FLAGS "-O2 -march=native -fopenmp ${OpenMP_CXX_FLAGS}")
+    set(CMAKE_CXX_FLAGS "-O2 -march=native ${OpenMP_CXX_FLAGS}")
 endif()
 
 set(CMAKE_CXX_OUTPUT_EXTENSION_REPLACE ON)
