--- a/cpp_src/CMakeLists.txt
+++ b/cpp_src/CMakeLists.txt
@@ -11,7 +11,7 @@ else()
     set(CMAKE_CXX_FLAGS "-O2 -march=native")
 endif()
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS} -ftemplate-depth=1000")
 
 set(CMAKE_CXX_OUTPUT_EXTENSION_REPLACE ON)
 
