Finish problem 24 solution, implement unit tests.

--- a/c_src/Makefile
+++ b/c_src/Makefile
@@ -4,8 +4,8 @@ MATH := -lm
 COVFLAG := -coverage
 test_dir := utest
 test := $(test_dir)/utest
-problems.o := p1.o p2.o p3.o
-problems_exe := p1 p2 p3
+problems.o := p1.o p2.o p3.o p24.o
+problems_exe := p1 p2 p3 p24
 
 .PHONY: all clean test
 
@@ -19,6 +19,7 @@ $(problems_exe): $(test).o
 	gcc $(CFLAGS) $(COVFLAG) p1.o $(test).o -o p1
 	gcc $(CFLAGS) $(COVFLAG) p2.o $(test).o -o p2
 	gcc $(CFLAGS) $(COVFLAG) p3.o $(test).o -o p3 $(MATH)
+	gcc $(CFLAGS) $(COVFLAG) p24.o $(test).o -o p24
 
 $(test).o: $(problems.o)
 	gcc $(CFLAGS) $(test).c -c -o $(test).o
@@ -27,6 +28,7 @@ $(problems.o):
 	gcc $(CFLAGS) $(COVFLAG) problem001.c -c -o p1.o
 	gcc $(CFLAGS) $(COVFLAG) problem002.c -c -o p2.o
 	gcc $(CFLAGS) $(COVFLAG) problem003.c -c -o p3.o
+	gcc $(CFLAGS) $(COVFLAG) problem024.c -c -o p24.o
 
 test:
 	@bash ./test.sh
